# LSTM_assisted_viscoelastic_viscoplastic_model

./: CMakeLists.txt  README.md  parameters.prm  t3_3D_coarse.msh  t3_3D_fine.msh  t3_3D_med.msh  vevp_ml_model.cc
